# Concurrency-opdracht-3

starting-template-quickhull/: LICENSE  README.md  build_and_run.cmd  build_and_test.cmd  cabal.project  cabal.project.freeze  hie.yaml  quickhull.cabal
starting-template-quickhull/app/: Config.hs
starting-template-quickhull/src/: Quickhull.hs
starting-template-quickhull/test/: Main.hs
